--- a/server/views/content/books/edit.ejs
+++ b/server/views/content/books/edit.ejs
@@ -4,6 +4,7 @@
             <h1><%= title %></h1>
 
             <form class="form" method="POST">
+                <input type="hidden" name="id" value="<%= book._id %>" >
                 <div class="form-group">
                     <label for="nameTextField">Book Title</label>
                     <input type="text" class="form-control"
@@ -40,8 +41,9 @@
                     id="descriptionTextArea"
                     placeholder="Enter the a brief description of the book"
                     name="description" 
+                    
+                    value="<%= book.description %>"
                     required>
-                    <%= book.description %>
                     </textarea>
                 </div>
 
@@ -55,7 +57,7 @@
                     required>
                 </div>
 
-                <button class="btn btn-primary" type="submit">
+                <button class="btn btn-primary"  type="submit">
                     <i class="fas fa-edit"></i> Submit</button>
                 
                     <a href="/books/list" class="btn btn-warning">
