--- a/server/views/content/books/list.ejs
+++ b/server/views/content/books/list.ejs
@@ -7,7 +7,7 @@
             <!-- ------------------------ -->
             <!-- FIX THE ADD BUTTON BELOW -->
             <!-- ------------------------ -->
-            <a href="" class="btn btn-primary" role="button">
+            <a href="/books/add" class="btn btn-primary" role="button">
                 <i class="fas fa-plus-circle"></i> Add a Book</a>
             <br>
             <table class="table table-bordered table-striped table-hover">
@@ -44,12 +44,17 @@
                         <td class="text-center col-1">
                             <!-- ------------------------ -->
                             <!-- ADD the EDIT BUTTON HERE -->
-                            <!-- ------------------------ -->
+                            <a class="btn btn-primary" href="/books/edit/<%= books[count].id %>">
+                                Edit
+                            </a>
                         </td>
                         <td class="text-center col-1">
                             <!-- ------------------------ -->
                             <!-- ADD the DELETE BUTTON HERE -->
-                            <!-- ------------------------ -->
+                           
+                                <a class="btn btn-warning" href="/books/delete/<%= books[count].id %>">
+                                    Delete
+                       
                         </td>
                     </tr>
                     <% } %>
