--- a/server/views/content/books/edit.ejs
+++ b/server/views/content/books/edit.ejs
@@ -37,14 +37,13 @@
 
                 <div class="form-group">
                     <label for="descriptionTextArea">Description</label>
-                    <textarea type="text" class="form-control"
+                    <input type="text" class="form-control"
                     id="descriptionTextArea"
                     placeholder="Enter the a brief description of the book"
                     name="description" 
-                    
                     value="<%= book.description %>"
                     required>
-                    </textarea>
+                    
                 </div>
 
                 <div class="form-group">
